Some changes to the content of the page

--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
           <b>Note:</b> This webpage details my <a class="hoversize" href="#education"><u>education</u></a>, <a class="hoversize" href="#experience"><u>professional experience</u></a>, <a class="hoversize" href="#projects"><u>projects</u></a>, <a class="hoversize" href="#skills"><u>skills</u></a>, and <a class="hoversize" href="#contact"><u>contact information</u></a>.
         </p>
         <p>
-          You can also view my <b>resume</b> <a aria-label="Open Carl's resume in a new tab" href="https://karlitto01.github.io/static/resume/Carl_Maalouli_Resume.pdf" target="_blank"
+          You may also view my <b>resume</b> <a aria-label="Open Carl's resume in a new tab" href="https://karlitto01.github.io/static/resume/Carl_Maalouli_Resume.pdf" target="_blank"
           class="hoversize"><u>here</u></a>.
         </p>
           
@@ -358,16 +358,19 @@
               <li>
                 Worked on a greenfield project to explore the development of <strong>cloud based applications</strong> at ECCC: 
                 <ul><li>
-                  Developed new features/components using <b>C#</b>, <b>JS</b>, and <b>HTML</b> based on <b>secure coding principles</b>, fixed bugs, created tests, updated documentation, and managed databases according to <b>Agile</b> methodologies.</li>
+                  Developed new features/components based on <b>secure coding principles</b>, fixed bugs, created tests, updated documentation, and managed databases according to <b>Agile</b> methodologies.</li>
               </ul>
             </li>
                   <li>
-                Supported a few legacy <strong>on-premise applications</strong>: code updates and bug fixes.</li>
+                Supported a few legacy <strong>on-premise applications</strong>: code reviews, code updates, and bug fixes.</li>
               <li>
-                Cooperated with other students at ECCC to develop an internal tracking and management tool for ECCC applications.</li>
-              <br />
+                Cooperated with other students at ECCC to develop an <strong>internal tracking and management app</strong> for ECCC applications:
+                <ul>
+                  <li>Development and revision of code changes (PR Reviews)</li>
+                </ul>
+              </li>
                 <li>
-                <b>Tools:</b> C#, HTML/CSS, JavaScript, .NET, ASP.NET, Blazor (WASM & Server), Bootstrap, Ant Design for Blazor, SQL, Azure Cloud Services
+                <b>Tools:</b> C#, JavaScript, HTML/CSS, .NET, ASP.NET MVC, Blazor (WASM & Server), Azure Functions, REST APIs, Bootstrap, Ant Design for Blazor, MS SQL Server, Azure Cloud Services, Visual Studio
               </li>
             </ul>
           </div>
@@ -385,14 +388,14 @@
         <div class="row">
           <div class="col s12 m6 l4">
             <div class="card medium">
-              <div class="icon-container">
+              <div class="icon-container activator">
                 <i class="mdi-button-pointer"></i>
               </div>
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of  web app" src="/static/img/capstone.webp" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b>Machine Learning</b> &nbsp;| Financial Report Analysis<i
+                <span class="card-title activator blue-text"><b class="activator">Machine Learning</b> &nbsp;| Financial Report Analysis<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
                   An AI financial expert (tap/click for more).
@@ -400,10 +403,11 @@
               </div>
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text sticky-header"><b>Accomplishments</b><i
+                <!-- <span class="card-title brown-text">Project Details<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text sticky-header"><b>Project Details</b><i
                     class="mdi-navigation-close right"></i></span>
-                    <ul>
+                    <h6>Capstone Project (AI/ML): Large Language Model for Financial Report Analysis</h6>
+                    <ul class="no-indent">
                       <li>Developed a comprehensive financial database using <b>Python</b> and <b>SQL</b>, which streamlined
                         data retrieval processes for public company filings.
                         </li>
@@ -429,14 +433,14 @@
 
           <div class="col s12 m6 l4">
             <div class="card medium">
-              <div class="icon-container">
+              <div class="icon-container activator">
                 <i class="mdi-button-pointer"></i>
               </div>
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="quiz app" src="/static/img/OS-Image.jpeg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b>Web App</b> &nbsp;| Event & RSVP Management<i
+                <span class="card-title activator blue-text"><b class="activator">Web App</b> &nbsp;| Event & RSVP Management<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
                   A modern web app (tap/click for more).
@@ -444,10 +448,11 @@
               </div>
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text sticky-header"><b>Accomplishments</b><i
+                <!-- <span class="card-title brown-text">Project Details<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text sticky-header"><b>Project Details</b><i
                   class="mdi-navigation-close right"></i></span>
-                <ul>
+                  <h6>Web Application for Event Management and RSVP Tracking</h6>
+                <ul class="no-indent">
                   <li>Developed and deployed a Flask-based web application to manage events and track RSVPs,
                     enhancing event planning efficiency and user communication.
                     </li>
@@ -476,14 +481,14 @@
 
           <div class="col s12 m6 l4">
             <div class="card medium">
-              <div class="icon-container">
+              <div class="icon-container activator">
                 <i class="mdi-button-pointer"></i>
               </div>
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of  web app" src="/static/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b>Machine Learning</b> &nbsp;| Object Detection<i
+                <span class="card-title activator blue-text"><b class="activator">Machine Learning</b> &nbsp;| Object Detection<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
                   An AI human counter (tap/click for more).
@@ -491,13 +496,14 @@
               </div>
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text sticky-header"><b>Accomplishments</b><i
+                <!-- <span class="card-title brown-text">Project Details<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text sticky-header"><b>Project Details</b><i
                   class="mdi-navigation-close right"></i></span>
-                    <ul>
+                  <h6>Machine Learning Model for Human Detection - Capacity Limit Enforcer</h6>
+                    <ul class="no-indent">
                       <li>Designed and developed a <b>human detection</b> machine learning model.</li>
                       <li> Integrated the 'human detector' into a program that counts the number of people in a room via video feed, aiding in enforcing
-                        capacity limits during the Covid-19 pandemic.</li>
+                        <b>capacity limits</b> during the Covid-19 pandemic.</li>
                     </ul>
                 <!-- <div class="card-action">
                   <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
@@ -517,24 +523,25 @@
 
           <div class="col s12 m6 l4">
             <div class="card medium">
-              <div class="icon-container">
+              <div class="icon-container activator">
                 <i class="mdi-button-pointer"></i>
               </div>
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="Screenshot of  web app" src="/static/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b>Hardware</b> &nbsp;| ARM Open Software<i
+                <span class="card-title activator blue-text"><b class="activator">Hardware</b> &nbsp;| ARM Open Software<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">"Breakout" on ARM (tap/click for more).
                 </p>
               </div>
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text sticky-header"><b>Accomplishments</b><i
+                <!-- <span class="card-title brown-text">Project Details<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text sticky-header"><b>Project Details</b><i
                   class="mdi-navigation-close right"></i></span>
-                <ul>
+                  <h6>Game development on an ARM Processor (Game: ”Breakout”)</h6>
+                <ul class="no-indent">
                   <li>Created a version of the game ”Breakout” using <b>C</b> and <b>ARM Assembly Language</b> for the ARM processor.</li>
                   <li>Used CPUlator as the virtual development environment due to Covid-19 restrictions.</li>
 
@@ -551,25 +558,26 @@
 
           <div class="col s12 m6 l4">
             <div class="card medium">
-              <div class="icon-container">
+              <div class="icon-container activator">
                 <i class="mdi-button-pointer"></i>
               </div>
               <div class="card-image waves-effect waves-block waves-light">
                 <img alt="quiz app" src="/static/img/map.webp" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b>Native App</b> &nbsp;| City Mapping Software<i
+                <span class="card-title activator blue-text"><b class="activator">Native App</b> &nbsp;| City Mapping Software<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
-                  For Linux/Unix (tap/click to see more).
+                  App for Linux/Unix (tap/click to see more).
                 </p>
               </div>
               <div class="card-reveal">
                 <!-- TODO: change this -- only close button -->
-                <!-- <span class="card-title brown-text">Accomplishments<i class="mdi-navigation-close right"></i></span> -->
-                <span class="card-title grey-text sticky-header"><b>Accomplishments</b><i
+                <!-- <span class="card-title brown-text">Project Details<i class="mdi-navigation-close right"></i></span> -->
+                <span class="card-title grey-text sticky-header"><b>Project Details</b><i
                   class="mdi-navigation-close right"></i></span>
-                <ul>
+                  <h6>Interactive City Mapping Software for Linux/Unix (C++)</h6>
+                <ul class="no-indent">
                   <li> Collaborated with a team of three engineering students to develop an interactive city mapping software for <b>Linux/Unix</b> using <b>C++</b>.</li>
                   <li>Implemented <b>algorithms</b> for efficient path finding, including Dijkstra’s, A* Heuristic, and Multi-Start</li>
                 </ul>
@@ -604,9 +612,10 @@
             });
           });
       
-          closeButton.addEventListener('click', function() {
-            iconContainer.style.display = 'block';
-
+          closeButton.addEventListener('click', function(event) {
+            if (event.target.classList.contains('mdi-navigation-close')) {
+              iconContainer.style.display = 'block';
+            }
           });
           const parentSpan = closeButton.parentElement;
           parentSpan.addEventListener('click', function() {
@@ -796,7 +805,7 @@
             <div class="row" style="padding-left: 10px;">
               <ul>
                 <li><b>Cyber Security:</b> Secure Software Development, Cryptography, Web Security, Access Control, Network Security, Hardware Security, Malware, Ethical Hacking</li>
-                <li><b>Methodologies & Concepts:</b> REST APIs, DevOps, Agile, Scrum, Front/Back-end Software Development, Artificial Intelligence & Machine Learning, IT Fundamentals</li>
+                <li><b>Methodologies & Concepts:</b> DevOps, Agile, Scrum, Front/Back-end Software Development, Artificial Intelligence & Machine Learning, IT Fundamentals</li>
                 <li><b>Hardware:</b> Analog/Digital Electronics, Computer Hardware & Architecture</li>
                 <li><b>Spoken Languages:</b> English (Excellent), French (Very Good), Arabic (Native)</li>
               </ul>
