--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                 </ul>
               </li>
                 <li>
-                <b>Tools:</b> C#, JavaScript, HTML/CSS, .NET, ASP.NET MVC, Blazor (WASM & Server), Azure Functions, REST APIs, Bootstrap, Ant Design for Blazor, MS SQL Server, Azure Cloud Services, Visual Studio
+                <b>Tools:</b> C#, JavaScript, HTML/CSS, .NET, ASP.NET MVC, Blazor (WASM & Server), Azure Functions, REST APIs, Bootstrap, Ant Design for Blazor, MS SQL Server, Azure Cloud Services, Azure DevOps, GitHub, Visual Studio
               </li>
             </ul>
           </div>
@@ -398,7 +398,7 @@
                 <span class="card-title activator blue-text"><b class="activator">Machine Learning</b> &nbsp;| Financial Report Analysis<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
-                  An AI financial expert (tap/click for more).
+                  An AI financial expert <small class="show italics">(tap/click for more)</small>
                 </p>
               </div>
               <div class="card-reveal">
@@ -443,7 +443,7 @@
                 <span class="card-title activator blue-text"><b class="activator">Web App</b> &nbsp;| Event & RSVP Management<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
-                  A modern web app (tap/click for more).
+                  A modern web app <small class="show italics">(tap/click for more)</small>
                 </p>
               </div>
               <div class="card-reveal">
@@ -491,7 +491,7 @@
                 <span class="card-title activator blue-text"><b class="activator">Machine Learning</b> &nbsp;| Object Detection<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
-                  An AI human counter (tap/click for more).
+                  An AI human counter <small class="show italics">(tap/click for more)</small>
                 </p>
               </div>
               <div class="card-reveal">
@@ -532,7 +532,7 @@
               <div class="card-content">
                 <span class="card-title activator blue-text"><b class="activator">Hardware</b> &nbsp;| ARM Open Software<i
                     class="mdi-navigation-more-vert right"></i></span>
-                <p class="hoverpointer activator">"Breakout" on ARM (tap/click for more).
+                <p class="hoverpointer activator">"Breakout" on ARM <small class="show italics">(tap/click for more)</small>
                 </p>
               </div>
               <div class="card-reveal">
@@ -568,7 +568,7 @@
                 <span class="card-title activator blue-text"><b class="activator">Native App</b> &nbsp;| City Mapping Software<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
-                  App for Linux/Unix (tap/click to see more).
+                  App for Linux/Unix <small class="show italics">(tap/click for more)</small>
                 </p>
               </div>
               <div class="card-reveal">
@@ -636,7 +636,7 @@
         <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Languages</h4>
-            <div class="row text-center">
+            <div class="row text-center flex-container">
               <div class="col s4 m2">
                 <img alt="" src="/static/img/C_Programming_Language.svg.png" class="responsive-img" />C
               </div>
@@ -675,7 +675,7 @@
         <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Databases</h4>
-            <div class="row text-center">
+            <div class="row text-center flex-container">
               
               <div class="col s4 m2">
                 <img alt="" src="/static/img/mongodb.png" class="responsive-img" />MongoDB
@@ -703,7 +703,7 @@
         <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Frameworks</h4>
-            <div class="row text-center">
+            <div class="row text-center flex-container">
               <div class="col s4 m2">
                 <img alt="" src="/static/img/Microsoft_.NET_logo.svg.png" class="responsive-img" />.NET
               </div>
@@ -747,7 +747,7 @@
         <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Libraries</h4>
-            <div class="row text-center">
+            <div class="row text-center flex-container">
               <div class="col s4 m2">
                 <img alt="" src="/static/img/numpy-logo-1-500x500.jpg" class="responsive-img" />NumPy
               </div>
@@ -771,7 +771,7 @@
         <div class="card">
           <div class="card-content">
             <h4 class="brown-text light">Other Skills</h4>
-            <div class="row text-center">
+            <div class="row text-center flex-container">
 
 
               <div class="col s4 m2">
@@ -788,6 +788,12 @@
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/static/img/docker.svg" class="responsive-img" />Docker
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/static/img/github.png" class="responsive-img" />GitHub
+              </div>
+              <div class="col s4 m2">
+                <img alt="" src="/static/img/az-devops2.jpg" class="responsive-img" />Azure DevOps
               </div>
               <div class="col s4 m2">
                 <img alt="" src="/static/img/latex.png" class="responsive-img" />LaTeX
