Fixed some projects

--- a/index.html
+++ b/index.html
@@ -406,17 +406,18 @@
                 <!-- <span class="card-title brown-text">Project Details<i class="mdi-navigation-close right"></i></span> -->
                 <span class="card-title grey-text sticky-header"><b>Project Details</b><i
                     class="mdi-navigation-close right"></i></span>
-                    <h6>Capstone Project (AI/ML): Large Language Model for Financial Report Analysis</h6>
+                    <h6>Capstone Project (AI/ML): Large Language Model (LLM) for Financial Report Analysis</h6>
                     <ul class="no-indent">
-                      <li>Developed a comprehensive financial database using <b>Python</b> and <b>SQL</b>, which streamlined
+                      <li>Developed a comprehensive <b>financial database</b> using <b>Python</b> and <b>SQL</b>, which streamlined
                         data retrieval processes for public company filings.
                         </li>
-                        <li>Created custom tools for data exchange between DB and <b>Large Language Models (LLMs)</b>.</li>
-                        <li>Leveraged open-sourced LLMs (GPT-4) and LLM frameworks <b>(LangChain)</b>, along with <b>prompt
-                          engineering</b> methods, to analyze filings accurately.</li>
-                        <li>Designed and implemented a modern <b>web app with a chat-based UI</b> that exposes the LLM
-                          agent to end-users looking to ask questions.</li>
-                    </ul>
+                        <li>Integrated the system with the financial database and utilized <b>APIs</b> to obtain real-time, accurate data, ensuring reliance on trusted data sources for numerical information.</li>
+                        <li>Leveraged open-sourced LLMs (such as <b>GPT-4</b>) and LLM frameworks (like <b>LangChain</b>), along with advanced <b>prompt engineering</b> methods, to ensure accurate interpretation and response to user queries related to financial documents.</li>
+                        <li>Implemented <b>custom tools</b> to facilitate seamless data exchange between the financial database / API and the LLM, ensuring efficient communication and data flow.</li>
+                        <li>Essentially, the goal was to transform the LLM from a 'know-it-all' jack of all trades into a <b>finance specialist</b>, making sure that any numerical data used for the analysis comes from trusted sources (not from LLM reasoning).</li>
+                        <li>Designed and implemented a modern <b>web application</b> with a <b>chat-based UI</b> using <b>Django</b> and <b>Tailwind CSS</b>, providing a user-friendly interface for interacting with the LLM.</li>
+                        <li>Developed a supplementary <b>graphing feature</b> to visualize financial data, allowing users to easily interpret and analyze trends and patterns.</li>
+                      </ul>
                 <!-- <div class="card-action">
                   <a aria-label="Visit " href="https://galvanic-music.herokuapp.com/" target="_blank" data-position="top"
                     data-tooltip="View Online"
@@ -456,13 +457,13 @@
                   <li>Developed and deployed a Flask-based web application to manage events and track RSVPs,
                     enhancing event planning efficiency and user communication.
                     </li>
-                  <li>Technologies Used: <b>Flask</b>, <b>Python</b>, <b>JavaScript</b>, <b>HTML</b>, <b>Bootstrap</b>, <b>SQL</b>, <b>Docker</b>, <b>GitHub
-                    Organization</b>.</li>
-                  <li>Employed <b>Agile</b> methodologies with <b>Scrum</b>, planning tasks using <b>sprints</b>.</li>
                   <li>Served as Software Lead in a team of seven students, designing the <b>software architecture</b>,
                     overseeing development, designing and developing new components, and coordinating team
                     tasks using GitHub for version control.
                     </li>
+                    <li>Employed <b>Agile</b> methodologies with <b>Scrum</b>, planning tasks using <b>sprints</b>.</li>
+                    <li>Tools used: <b>Flask</b>, <b>Python</b>, <b>JavaScript</b>, <b>HTML</b>, <b>Bootstrap</b>, <b>SQL</b>, <b>Docker</b>, <b>GitHub
+                      Organization</b>.</li>
                 </ul>
                 <!-- <div class="card-action">
                   <a aria-label="Visit " href="https://quiz-up-app.herokuapp.com/" target="_blank" data-position="top"
@@ -542,8 +543,10 @@
                   class="mdi-navigation-close right"></i></span>
                   <h6>Game development on an ARM Processor (Game: ”Breakout”)</h6>
                 <ul class="no-indent">
-                  <li>Created a version of the game ”Breakout” using <b>C</b> and <b>ARM Assembly Language</b> for the ARM processor.</li>
-                  <li>Used CPUlator as the virtual development environment due to Covid-19 restrictions.</li>
+                  <li>Developed a version of the game ”Breakout” on the ARM processor using <b>C</b> and <b>ARM Assembly Language</b>.</li>
+                  <li>The <b>VGA display</b> on the <b>DE1-SoC board</b> was used for the game's 'arcade-style' graphics. </li>
+                  <li>Due to COVID-19 and the switch to virtual learning, an online simulator called <a href="https://cpulator.01xz.net/" target="_blank"
+                    ><span>CPUlator</span></a> was used instead of a physical DE1-SoC board.</li>
 
                 </ul>
                 <!-- <div class="card-action">
@@ -580,6 +583,7 @@
                 <ul class="no-indent">
                   <li> Collaborated with a team of three engineering students to develop an interactive city mapping software for <b>Linux/Unix</b> using <b>C++</b>.</li>
                   <li>Implemented <b>algorithms</b> for efficient path finding, including Dijkstra’s, A* Heuristic, and Multi-Start</li>
+                  <li>Features include <b>fastest route</b> and <b>courier vehicle routing.</b></li>
                 </ul>
                 <!-- <div class="card-action">
                   <a aria-label="Visit the GitHub repo for  project" href="https://github.com/carlmaalouli/"
