--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <!-- <a aria-label="Open Carl's resume in a new tab" href="#resume" target="_blank"
           onclick="window.open('https://drive.google.com/file/d/1vYi-bMyIsZPve0x_clxY8xsDtiHiOMd3/view?usp=sharing')"
           class="waves-effect waves-dark blue-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a> -->
-        <a aria-label="Open Carl's resume in a new tab" href="https://karlitto01.github.io/static/resume/Carl_Maalouli_Resume.pdf" target="_blank"
+        <a aria-label="Open Carl's resume in a new tab" href="/static/resume/Carl_Maalouli_Resume.pdf" target="_blank"
         class="waves-effect waves-dark blue-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
@@ -248,7 +248,7 @@
           <b>Note:</b> This webpage details my <a class="hoversize" href="#education"><u>education</u></a>, <a class="hoversize" href="#experience"><u>professional experience</u></a>, <a class="hoversize" href="#projects"><u>projects</u></a>, <a class="hoversize" href="#skills"><u>skills</u></a>, and <a class="hoversize" href="#contact"><u>contact information</u></a>.
         </p>
         <p>
-          You may also view my <b>resume</b> <a aria-label="Open Carl's resume in a new tab" href="https://karlitto01.github.io/static/resume/Carl_Maalouli_Resume.pdf" target="_blank"
+          You may also view my <b>resume</b> <a aria-label="Open Carl's resume in a new tab" href="/static/resume/Carl_Maalouli_Resume.pdf" target="_blank"
           class="hoversize"><u>here</u></a>.
         </p>
           
