--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
                   <img alt="UofT logo" src="/static/img/uoft.png" class="logo-img responsive-img" />
                 </a>
                 <p>
-                  <span class="card-title"><a href="https://www.utoronto.ca/" target="_blank" class="blue-text hoverline responsive-break"><b>University of Toronto</b> &nbsp;<br class="break-on-small">| St. George Campus</a></span>
+                  <span class="card-title"><a href="https://www.utoronto.ca/" target="_blank" class="blue-text hoverline responsive-break"><b>University of Toronto</b> &nbsp;<span class="hide-on-small">|</span>&nbsp; <br class="break-on-small">St. George Campus</a></span>
                 </p>
                 
                 <p>
@@ -350,7 +350,7 @@
                       src="/static/img/Environment_and_Climate_Change_Canada_logo.svg.png"  class="eccc-img responsive-img" /></a>
               <!-- <div class="col s12 m9"> -->
             
-                <p><span class="card-title blue-text responsive-break"><b>.NET APPLICATION DEVELOPER</b> &nbsp;<br class="break-on-medium">| <a href="https://www.canada.ca/en.html" target="_blank" class="blue-text hoverline">Government of Canada</a></span></p>
+                <p><span class="card-title blue-text responsive-break"><b>.NET APPLICATION DEVELOPER</b> &nbsp;<span class="hide-on-medium">|</span> <br class="break-on-medium"><a href="https://www.canada.ca/en.html" target="_blank" class="blue-text hoverline">Government of Canada</a></span></p>
                 <p><b>Duration:</b> 16 months
                 <p><b>Department:</b> Environment and Climate Change Canada
               </div>
@@ -395,7 +395,7 @@
                 <img alt="Screenshot of  web app" src="/static/img/capstone.webp" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b class="activator">Machine Learning</b> &nbsp;| Financial Report Analysis<i
+                <span class="card-title activator blue-text"><b class="activator">Machine Learning</b> &nbsp;|&nbsp; Financial Report Analysis<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
                   An AI financial expert <small class="show italics">(tap/click for more)</small>
@@ -441,7 +441,7 @@
                 <img alt="quiz app" src="/static/img/OS-Image.jpeg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b class="activator">Web App</b> &nbsp;| Event & RSVP Management<i
+                <span class="card-title activator blue-text"><b class="activator">Web App</b> &nbsp;|&nbsp; Event & RSVP Management<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
                   A modern web app <small class="show italics">(tap/click for more)</small>
@@ -457,9 +457,9 @@
                   <li>Developed and deployed a Flask-based web application to manage events and track RSVPs,
                     enhancing event planning efficiency and user communication.
                     </li>
-                  <li>Served as Software Lead in a team of seven students, designing the <b>software architecture</b>,
+                  <li>Served as Software Lead on a team of seven students, designing the <b>software architecture</b>,
                     overseeing development, designing and developing new components, and coordinating team
-                    tasks using GitHub for version control.
+                    tasks.
                     </li>
                     <li>Employed <b>Agile</b> methodologies with <b>Scrum</b>, planning tasks using <b>sprints</b>.</li>
                     <li>Tools used: <b>Flask</b>, <b>Python</b>, <b>JavaScript</b>, <b>HTML</b>, <b>Bootstrap</b>, <b>SQL</b>, <b>Docker</b>, <b>GitHub
@@ -489,7 +489,7 @@
                 <img alt="Screenshot of  web app" src="/static/img/Blog-Images-Forget-Machine-Learning-Humans-Still-Have-a-Lot-to-Learn-Part-II.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b class="activator">Machine Learning</b> &nbsp;| Object Detection<i
+                <span class="card-title activator blue-text"><b class="activator">Machine Learning</b> &nbsp;|&nbsp; Object Detection<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
                   An AI human counter <small class="show italics">(tap/click for more)</small>
@@ -531,7 +531,7 @@
                 <img alt="Screenshot of  web app" src="/static/img/gan.jpg" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b class="activator">Hardware</b> &nbsp;| ARM Open Software<i
+                <span class="card-title activator blue-text"><b class="activator">Hardware</b> &nbsp;|&nbsp; ARM Open Software<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">"Breakout" on ARM <small class="show italics">(tap/click for more)</small>
                 </p>
@@ -543,7 +543,7 @@
                   class="mdi-navigation-close right"></i></span>
                   <h6>Game development on an ARM Processor (Game: ”Breakout”)</h6>
                 <ul class="no-indent">
-                  <li>Developed a version of the game ”Breakout” on the ARM processor using <b>C</b> and <b>ARM Assembly Language</b>.</li>
+                  <li>Developed a version of the game 'Breakout' on the ARM processor using <b>C</b> and <b>ARM Assembly Language</b>.</li>
                   <li>The <b>VGA display</b> on the <b>DE1-SoC board</b> was used for the game's 'arcade-style' graphics. </li>
                   <li>Due to COVID-19 and the switch to virtual learning, an online simulator called <a href="https://cpulator.01xz.net/" target="_blank"
                     ><span>CPUlator</span></a> was used instead of a physical DE1-SoC board.</li>
@@ -568,7 +568,7 @@
                 <img alt="quiz app" src="/static/img/map.webp" style="height: 100%; width: 100%" class="activator" />
               </div>
               <div class="card-content">
-                <span class="card-title activator blue-text"><b class="activator">Native App</b> &nbsp;| City Mapping Software<i
+                <span class="card-title activator blue-text"><b class="activator">Native App</b> &nbsp;|&nbsp; City Mapping Software<i
                     class="mdi-navigation-more-vert right"></i></span>
                 <p class="hoverpointer activator">
                   App for Linux/Unix <small class="show italics">(tap/click for more)</small>
