Made company name a hyperlink (latest experience)

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
           <div class="card-content">
             <div class="row pl-4">
               <a href="https://axiominnovations.com/" target="_blank"><img alt="Axiom logo" src="/static/img/axiom-logo.png" class="axiom-img responsive-img" /></a>
-              <p class=" axiom-title"><span class="card-title blue-text responsive-break"><b>SOFTWARE DEVELOPER</b> &nbsp;<span class="hide-on-small">|</span> <br class="break-on-small">Axiom Innovations Inc.</span></p>
+              <p class=" axiom-title"><span class="card-title blue-text responsive-break"><b>SOFTWARE DEVELOPER</b> &nbsp;<span class="hide-on-small">|</span> <br class="break-on-small"><a href="https://axiominnovations.com/" target="_blank" class="blue-text hoverline">Axiom Innovations Inc.</a></span></p>
               <p class="ml-1"><b>Location:</b> North York, Toronto - Canada (On-site)</p>
             </div>
             <ul>
