--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
         <div class="col-md-9">
           <div class="content section-padding valign" style="margin-left: 10%; margin-top: 50px;">
             <div class="caption">
-              <h2>Hi, I’m <span style="padding-left: 1rem; padding-right: 1rem;" class="blue rounded">Carl Maalouli</span></h2>
+              <h2>Hi, I’m <span style="padding-left: 1rem; padding-right: 1rem;" class="light-blue rounded">Carl Maalouli</span></h2>
               <h5 style="color:#fff; margin-top: 3rem;">A <span class="typing" style="font-weight: 300; color:#004d40"></span></h5>
               <h5>Self-driven <span style="font-weight: bold;">computer engineer</span> with a curious mind and a passion for building secure, scalable systems. I thrive in fast-paced environments, turning complex problems into elegant solutions.</h5>
             </div>
